    Tom Blake and Michal Kreps (LHCb).
    Updated the EvtBcVHad model to also handle Bc -> psi Ks K decays, 
    courtesy of Aleksei Luchinsky (LHCb).
    Add new decay model EvtBsMuMuKK (BS_MUMUKK) for Bs to J/psi (mu+mu-) K+K-,
    courtesy of Veronika Chobanova, Jeremy Dalseno, Diego Martinez Santos and
    Marcos Romero Lamas (LHCb).

15th March 2019 Tom Latham
    Implement cmake build system, replacing the old config method.

29th Jan 2019 Michal Kreps
    Allow reading decay files which are missing end-of-line before end-of-file.

7th December 2018 John Back
    Added the EvtBLLNuL (BLLNUL) model that generates rare B -> ell ell nu ell 
    decays, where ell = e or mu, courtesy of Anna Danilina and Nikolai Nikitin 
    (LHCb). Removed the EvtB2MuMuMuNu (BUTOMMMN) model, since its now replaced 
    by the more general BLLNuL one.

5th November 2018 John Back
    Added the BToDiBaryonlnupQCD model for generating B to p N* l nu decays,
    where N can be any (exited) charged baryon (spin 1/2 or 3/2), courtesy of
    Mark Smith and Ryan Newcombe (LHCb), with added code optimisations.

17th October 2018 John Back
    Added various decay models from LHCb EvtGenExtras package:
    EvtBcVHad ("BC_VHAD"), Evtbs2llGammaMNT ("BSTOGLLMNT"),
    Evtbs2llGammaISRFSR ("BSTOGLLISRFSR"), EvtbTosllMS ("BTOSLLMS"),
    EvtbTosllMSExt ("BTOSLLMSEXT"), EvtLb2Baryonlnu ("Lb2Baryonlnu"),
    EvtLb2plnuLCSR ("Lb2plnuLCSR"), EvtLb2plnuLQCD ("Lb2plnuLQCD"),
    EvtFlatSqDalitz ("FLATSQDALITZ") and EvtPhspFlatLifetime 
    ("PHSPFLATLIFETIME").

5th October 2018 John Back
    Updated setupEvtGen.sh to work with the new HepForge Phabricator site.

13th March 2018 John Back
    Updated EvtPythiaEngine to correctly handle updates of various particle 
    properties so that Pythia uses the same information as EvtGen (evt.pdl)
    for the generic and alias PYTHIA decay model.

12th March 2018 John Back
    Updated EvtBcXMuNu models (X = Scalar, Vector, Tensor) to generate